# tg-watchbot

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  example.config.yaml
.github/workflows/: ci.yml
migrations/: 0001_init.sql  0002_drop_sync_state.sql  0002_update_resources_unique.sql  0003_add_resource_metadata.sql  0004_add_sync_state.sql  0005_add_outbox_cursor.sql
src/: config.rs  db.rs  handlers.rs  lib.rs  main.rs  model.rs  notion.rs  outbox.rs  thumbnail.rs
src/db/: mod.rs  model.rs  repo.rs
src/notion/: mod.rs  model.rs
tests/: integration.rs  notion_it.rs  notion_syncer_test.rs  sequence_test.rs
