[package]
name = "tg-watchbot"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
async-trait = "0.1"
chrono = { version = "0.4", features = ["clock", "serde"] }
dotenvy = "0.15"
futures = "0.3"
once_cell = "1"
regex = "1"
reqwest = { version = "0.11", default-features = false, features = ["json", "gzip", "brotli", "deflate", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "macros", "chrono", "migrate"] }
teloxide = { version = "0.12", default-features = false, features = ["macros", "rustls", "ctrlc_handler", "throttle", "cache-me"] }
thiserror = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["rt", "macros", "time"] }
serde_json = "1"
